1. 税局章的优化 2. 增加金额大写 3. 添加注释 4. 打包到本地仓库后，项目中无法使用的问题 5. 版本支持jdk>=1.7